--- a/_dist/index.html
+++ b/_dist/index.html
@@ -230,96 +230,96 @@
 						<div class="map-index-4-slider-2 map-index-4-slider" id="map-index-4-slider-2">
 							<div class="content">
 								<div class="number">02</div>
-								<div class="title">Sân golf chuẩn quốc tế 27 lỗ</div>
+								<div class="title"> Nhà câu lạc bộ hiện đại</div>
 								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-3 map-index-4-slider" id="map-index-4-slider-3">
 							<div class="content">
 								<div class="number">03</div>
-								<div class="title">Sân golf chuẩn quốc tế 27 lỗ</div>
+								<div class="title"> Tổ Hợp Giải Trí & Công Viên Nước</div>
 								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/imag	es/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/2.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/2.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/2.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/2.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/2.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-4 map-index-4-slider" id="map-index-4-slider-4">
 							<div class="content">
 								<div class="number">04</div>
-								<div class="title">Sân golf chuẩn quốc tế 27 lỗ</div>
+								<div class="title">Công viên chủ đề</div>
 								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/3.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/3.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/3.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/3.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/3.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-5 map-index-4-slider" id="map-index-4-slider-5">
 							<div class="content">
 								<div class="number">05</div>
-								<div class="title">Sân golf chuẩn quốc tế 27 lỗ</div>
+								<div class="title">Trường Tiểu Học</div>
 								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-6 map-index-4-slider" id="map-index-4-slider-6">
 							<div class="content">
 								<div class="number">06</div>
-								<div class="title">Sân golf chuẩn quốc tế 27 lỗ</div>
+								<div class="title">Trường trung học</div>
 								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-7 map-index-4-slider" id="map-index-4-slider-7">
 							<div class="content">
 								<div class="number">07</div>
-								<div class="title">Sân golf chuẩn quốc tế 27 lỗ</div>
+								<div class="title">Bệnh viện quốc tế</div>
 								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
-									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/4.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/4.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/4.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/4.jpg" alt=""></div>
+									<div class="swiper-slide"><img src="./assets/images/index-4/4.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -348,37 +348,37 @@
 						<div class="map-dialog">
 							<div class="dialog dialog-1" data-dialog="1">
 								<div class="dialog-wrapper">
-									<h2>Sân golf chuẩn quốc tế 1</h2>
+									<h2>Sân golf chuẩn quốc tế 27 lỗ</h2>
 								</div>
 							</div>
 							<div class="dialog dialog-2" data-dialog="2">
 								<div class="dialog-wrapper">
-									<h2>Sân golf chuẩn quốc tế 2</h2>
+									<h2>Nhà câu lạc bộ hiện đại</h2>
 								</div>
 							</div>
 							<div class="dialog dialog-3" data-dialog="3">
 								<div class="dialog-wrapper">
-									<h2>Sân golf chuẩn quốc tế 3</h2>
+									<h2>Tổ Hợp Giải Trí & Công Viên Nước</h2>
 								</div>
 							</div>
 							<div class="dialog dialog-4" data-dialog="4">
 								<div class="dialog-wrapper">
-									<h2>Sân golf chuẩn quốc tế 4</h2>
+									<h2> Công viên chủ đề</h2>
 								</div>
 							</div>
 							<div class="dialog dialog-5" data-dialog="5">
 								<div class="dialog-wrapper">
-									<h2>Sân golf chuẩn quốc tế 5</h2>
+									<h2>Trường Tiểu Học</h2>
 								</div>
 							</div>
 							<div class="dialog dialog-6" data-dialog="6">
 								<div class="dialog-wrapper">
-									<h2>Sân golf chuẩn quốc tế 6</h2>
+									<h2>Trường trung học</h2>
 								</div>
 							</div>
 							<div class="dialog dialog-7" data-dialog="7">
 								<div class="dialog-wrapper">
-									<h2>Sân golf chuẩn quốc tế 7</h2>
+									<h2>Bệnh viện quốc tế</h2>
 								</div>
 							</div>
 						</div>
