update feed back

--- a/_dist/index.html
+++ b/_dist/index.html
@@ -82,7 +82,7 @@
 											</div>
 											<div class="sub-title wow fadeInLeft" data-wow-delay=".3s">
 												<p>West Lakes Golf & Villass</p>
-												<p>Quần thể biệt thự nghỉ dưỡng ven đô,<br>ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh</p>
+												<p>Quần thể biệt thự nghỉ dưỡng ven đô, ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh</p>
 											</div>
 											<div class="desc wow fadeInLeft" data-wow-delay=".4s">
 												<p>Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một ssản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.</p>
@@ -151,7 +151,7 @@
 									<h2>VỊ TRÍ & TIỆN ÍCH</h2>
 								</div>
 								<div class="desc wow fadeInDown" data-wow-delay=".4s">
-									<h3>Vị trí tiềm năng – Động lực sinh lời vượt trội</h3>
+									<h3>Vị trí tiềm năng – sinh lời vượt trội</h3>
 									<p>Tọa lạc ngay mặt tiền Tỉnh lộ 822 thuộc huyện Đức Hòa, tỉnh Long An, West Lakes Golf & Villas là Đô thị sân Golf đầu tiên sở hữu vị trí hội tụ đầy đủ mọi yếu tố “nội lực” cần thiết giúp thúc đẩy sự sinh lời nhanh chóng.</p>
 								</div>
 							</div>
@@ -215,7 +215,6 @@
 							<div class="content">
 								<div class="number">01</div>
 								<div class="title">Sân golf chuẩn quốc tế 27 lỗ</div>
-								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
@@ -231,7 +230,6 @@
 							<div class="content">
 								<div class="number">02</div>
 								<div class="title"> Nhà câu lạc bộ hiện đại</div>
-								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
@@ -247,7 +245,6 @@
 							<div class="content">
 								<div class="number">03</div>
 								<div class="title"> Tổ Hợp Giải Trí & Công Viên Nước</div>
-								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
@@ -263,7 +260,6 @@
 							<div class="content">
 								<div class="number">04</div>
 								<div class="title">Công viên chủ đề</div>
-								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
@@ -279,7 +275,6 @@
 							<div class="content">
 								<div class="number">05</div>
 								<div class="title">Trường Tiểu Học</div>
-								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
@@ -295,7 +290,6 @@
 							<div class="content">
 								<div class="number">06</div>
 								<div class="title">Trường trung học</div>
-								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
@@ -311,7 +305,6 @@
 							<div class="content">
 								<div class="number">07</div>
 								<div class="title">Bệnh viện quốc tế</div>
-								<div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.</div>
 							</div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
@@ -763,8 +756,9 @@
 											<div class="item active" data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+													<h3 class="lcl lcl-3">Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ</h3>
 													<p class="d-n">Dự án West Lakes Golf & Villas là một trong những dự án của tập đoàn trần anh đầu tư tại san golf tân mỹ, Với hơn 600 căn Villas được đầu tư bài bản, bao gồm Nhà liền kề, - Biệt thự song lập - Biệt thự đơn lập, Diện tích sử dụng từ 200 - 1000m2, Giá từ 3,2 tỷ ( Giá hoàn thiện full và đầy đủ tiện ích, Đã bao gồm VAT)</p>
-													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
+													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/10</div>
 												</div>
 											</div>
 										</div>
@@ -772,6 +766,7 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=lNYEb89BPDs">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__2.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+													<h3 class="lcl lcl-3">Khu đô thị Phúc an city Giai đoạn 2 khu biệt thự phúc an tiến độ tháng 6/2020</h3>
 													<p class="d-n">Giai đoạn 2 khu biệt thự phúc an với hơn 500 căn biệt thự mini, hiện đang trong quá trình bàn giao nhà, Các phân khu tiện ích cũng đang trong quá trình hoàn thiện những công đoan cuối cùng.</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -781,6 +776,7 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=yExVYFvfqSI">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__3.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+													<h3 class="lcl lcl-3">Dự án Bella villa đức hoà Tiến độ tháng 6/2020 giai đoạn 2</h3>
 													<p class="d-n">Video tiến độ dự án Bella villa đức hoà, Toạ lạc ngay mặt tiền tỉnh lộ 824, Quy mô 9,2 ha với hơn 400 căn biệt thự song lập và nhà phố liền kề.</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -790,6 +786,7 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=X1K6g-vhfFM">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+													<h3 class="lcl lcl-3">khu biệt thự dự án phúc an city giai đoạn 2 tháng 5 năm 2020</h3>
 													<p class="d-n">Video chi tiết khu biệt thự dự án phúc an city giai đoạn 2, tháng 5 năm 2020, hiện tại các hạng mục trong dự án đã hoàn thiện 80 - 90%. các block nhà đã xong, quý khách hàng có thể nhận nhà và hoàn thiện để vào ở</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -799,6 +796,7 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=HGuZXRY9tw8">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__2.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+													<h3 class="lcl lcl-3">Dự án Solar City bến lức Tiến độ tháng 6 năm 2020 CĐT Trần anh group</h3>
 													<p class="d-n">Dự án Solar city quy mô 4,8ha với 225 căn nhà phố liền kề, thiết kế 1 trệt 2 lầu, view hơn 300m bờ sông vàm cỏ đông, toạ lạc ngay mặt tiền đường Nguyễn văn tuôi - Nguyễn trung trực thuộc trung tâm thị trấn bến lức</p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
@@ -808,6 +806,7 @@
 											<div class="item" data-url="https://www.youtube.com/watch?v=01ZCK41fnXk">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__3.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
+													<h3 class="lcl lcl-3">Dự án WEST LAKES Golf & Villas Mới nhất ( Biệt thự sân golf )</h3>
 													<p class="d-n">Video chi tiết dự án Biệt thự Sân Golf WEST LAKES GOLF& VILLAS, Phát triển dự án tập đoàn Trần anh group. Quy mô 13ha với hơn 500 căn BT song lập - đơn lập - và biệt thự mini. </p>
 													<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
 												</div>
