update load first video section 10

--- a/_dist/index.html
+++ b/_dist/index.html
@@ -739,7 +739,7 @@
 								<div class="col-lg-6">
 									<div class="review-video">
 										<div class="block-video">
-											<div class="youtube-api" data-thumbnail="./assets/images/items/index-9__1.png" data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0"></div>
+											<div class="youtube-api" data-thumbnail="./assets/images/items/index-9__1.png" data-url="https://www.youtube.com/watch?v=WhY1WJtWq1g"></div>
 										</div>
 										<div class="content" data-bg="./assets/images/background/text-review-video.png">
 											<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
@@ -753,7 +753,7 @@
 								<div class="swiper-container">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
-											<div class="item active" data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0">
+											<div class="item active" data-url="https://www.youtube.com/watch?v=WhY1WJtWq1g">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
 													<h3 class="lcl lcl-3">Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ</h3>
