upload css feedback

--- a/_dist/index.html
+++ b/_dist/index.html
@@ -596,7 +596,7 @@
 								<h2>HỖ TRỢ TÀI CHÍNH</h2>
 							</div>
 							<div class="sub-title">
-								<p class="ta-c">"Đồng hành cùng Trần Anh Group phát triển dự án West Lakes Golf & Villas, .... cung cấp gói hỗ trợ tài chính như sau:</p>
+								<p>"Đồng hành cùng Trần Anh Group phát triển dự án West Lakes Golf & Villas, .... cung cấp gói hỗ trợ tài chính như sau:</p>
 							</div>
 						</div>
 						<div class="list-item">
