--- a/_dist/index.html
+++ b/_dist/index.html
@@ -146,7 +146,7 @@
 				<div class="block-1">
 					<div class="container h-100">
 						<div class="block-content" max-width="40%">
-							<div class="content a">
+							<div class="content">
 								<div class="block-title wow fadeInDown" data-wow-delay=".2s" after-bg-main>
 									<h2>VỊ TRÍ & TIỆN ÍCH</h2>
 								</div>
