--- a/_dist/index.html
+++ b/_dist/index.html
@@ -753,7 +753,7 @@
 								<div class="swiper-container">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
-											<div class="item active" data-url="https://www.youtube.com/watch?v=WhY1WJtWq1g">
+											<div class="item" data-url="https://www.youtube.com/watch?v=WhY1WJtWq1g">
 												<div class="img ov-h"><img class="ofcv" src="./assets/images/items/index-9__1.png" alt=""></div>
 												<div class="text" data-bg="./assets/images/background/item_index-9.png">
 													<h3 class="lcl lcl-3">Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ</h3>
