--- a/_dist/index.html
+++ b/_dist/index.html
@@ -739,7 +739,7 @@
 								<div class="col-lg-6">
 									<div class="review-video">
 										<div class="block-video">
-											<div class="youtube-api" data-thumbnail="./assets/images/items/index-9__1.png" data-url="https://www.youtube.com/watch?v=WhY1WJtWq1g"></div>
+											<div class="youtube-api" data-thumbnail="./assets/images/items/index-9__1.png" data-url></div>
 										</div>
 										<div class="content" data-bg="./assets/images/background/text-review-video.png">
 											<div class="date" data-bg="./assets/images/background/item-date-index-9.png">28/05/20</div>
