--- a/_dist/news-detail.html
+++ b/_dist/news-detail.html
@@ -20,25 +20,25 @@
 						<div class="swiper-container">
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
-									<div class="item active"><a href="#" data-scroll-to="1">giới thiệu</a></div>
+									<div class="item active"><a href="index.html" data-scroll-to="1">giới thiệu</a></div>
 								</div>
 								<div class="swiper-slide">
-									<div class="item"><a href="#" data-scroll-to="2">vị trí và tiện ích</a></div>
+									<div class="item"><a href="index.html" data-scroll-to="2">vị trí và tiện ích</a></div>
 								</div>
 								<div class="swiper-slide">
-									<div class="item"><a href="#" data-scroll-to="3">mặt bằng</a></div>
+									<div class="item"><a href="index.html" data-scroll-to="3">mặt bằng</a></div>
 								</div>
 								<div class="swiper-slide">
-									<div class="item"><a href="#" data-scroll-to="4">chương trình bán hàng</a></div>
+									<div class="item"><a href="index.html" data-scroll-to="4">chương trình bán hàng</a></div>
 								</div>
 								<div class="swiper-slide">
-									<div class="item"><a href="#" data-scroll-to="5">hỗ trợ tài chính</a></div>
+									<div class="item"><a href="index.html" data-scroll-to="5">hỗ trợ tài chính</a></div>
 								</div>
 								<div class="swiper-slide">
-									<div class="item"><a href="#" data-scroll-to="6">tiến độ</a></div>
+									<div class="item"><a href="index.html" data-scroll-to="6">tiến độ</a></div>
 								</div>
 								<div class="swiper-slide">
-									<div class="item"><a href="#" data-scroll-to="7">thư viện</a></div>
+									<div class="item"><a href="index.html" data-scroll-to="7">thư viện</a></div>
 								</div>
 							</div>
 						</div>
