--- a/_dist/index.html
+++ b/_dist/index.html
@@ -822,7 +822,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="index-11">
+				<section class="index-11" data-scroll-id="8">
 					<div class="container" max-width="1360px">
 						<div class="block-title mx-at ta-c" max-width="75%" no-after></div>
 						<div class="row">
@@ -877,7 +877,7 @@
 				</div>
 			</div>
 			<div class="block-item" type="text">
-				<div class="item">
+				<div class="item" data-scroll-to="8">
 					<div class="text">NHẬN BÁO GIÁ</div>
 					<div class="icon"><img class="svg" data-src="./assets/icons/quotation.svg" alt="PHONE"></div>
 				</div>
