--- a/_dist/index.html
+++ b/_dist/index.html
@@ -833,6 +833,8 @@
 										<div class="item">Add: Tỉnh lộ 822, Ấp Chánh, xã Tân Mỹ, huyện Đức Hòa, tỉnh Long An.</div>
 										<div class="item">Phone: 0938 188 329</div>
 										<div class="item">Email: contact.trananhgroup@gmail.com</div>
+										<div class="item">
+											Facebook:<a class="lcl lcl-1" target="_blank" href="https://www.facebook.com/trananhgroupwestlakesgolfvillas">https://www.facebook.com/trananhgroupwestlakesgolfvillas</a></div>
 									</div>
 								</div>
 								<div class="block-map">
