--- a/_dist/index.html
+++ b/_dist/index.html
@@ -885,20 +885,18 @@
 				</div>
 			</div>
 			<div class="block-item">
-				<div class="item css-selector">
-					<div class="icon"><img class="svg" data-src="./assets/icons/phone.svg" alt="PHONE"></div>
-					<div class="text-hover">
-						<h5>0938 188 329</h5>
-					</div>
-				</div>
+				<div class="item css-selector"><a href="tel:0938188329">
+						<div class="icon"><img class="svg" data-src="./assets/icons/phone.svg" alt="PHONE"></div>
+						<div class="text-hover">
+							<h5>0938 188 329</h5>
+						</div></a></div>
 			</div>
 			<div class="block-item">
-				<div class="item css-selector">
-					<div class="icon"><img class="svg" data-src="./assets/icons/download.svg" alt="PHONE"></div>
-					<div class="text-hover">
-						<h5>tải chính sách thanh toán</h5>
-					</div>
-				</div>
+				<div class="item css-selector"><a href="./assets/images/index-4/1.jpg" download>
+						<div class="icon"><img class="svg" data-src="./assets/icons/download.svg" alt="PHONE"></div>
+						<div class="text-hover">
+							<h5>tải chính sách thanh toán</h5>
+						</div></a></div>
 			</div>
 		</div>
 		<footer>
