--- a/_dist/index.html
+++ b/_dist/index.html
@@ -870,14 +870,13 @@
 			<div class="index-page" id="js-page-verify" hidden></div>
 		</main>
 		<div class="fixed-menu">
-			<div class="block-item">
-				<div class="item css-selector">
-					<div class="icon"><img class="svg" data-src="./assets/icons/view-360.svg" alt="VIEW-360"></div>
-					<div class="text-hover">
-						<h5>VIEW 360<sup>o</sup></h5>
-					</div>
-				</div>
-			</div>
+			<div class="block-item"><a href="https://demo.egal.vn/demo/westlakes/" target="_blank">
+					<div class="item css-selector">
+						<div class="icon"><img class="svg" data-src="./assets/icons/view-360.svg" alt="VIEW-360"></div>
+						<div class="text-hover">
+							<h5>VIEW 360<sup>o</sup></h5>
+						</div>
+					</div></a></div>
 			<div class="block-item" type="text">
 				<div class="item" data-scroll-to="8">
 					<div class="text">NHẬN BÁO GIÁ</div>
