--- a/_dist/index.html
+++ b/_dist/index.html
@@ -45,7 +45,7 @@
 					</div>
 					<div class="language">
 						<ul>
-							<li class="item active" data-language="vn"><a>en</a></li>
+							<li class="item active" data-language="vn" disabled-click><a>en</a></li>
 							<li class="item" data-language="en"><a>vn</a></li>
 						</ul>
 					</div>
