--- a/_dist/index.html
+++ b/_dist/index.html
@@ -872,7 +872,7 @@
 		<div class="fixed-menu">
 			<div class="block-item"><a href="https://demo.egal.vn/demo/westlakes/" target="_blank">
 					<div class="item css-selector">
-						<div class="icon"><img class="svg" data-src="./assets/icons/view-360.svg" alt="VIEW-360"></div>
+						<div class="icon"><img src="./assets/icons/view-360.svg" alt="VIEW-360"></div>
 						<div class="text-hover">
 							<h5>VIEW 360<sup>o</sup></h5>
 						</div>
@@ -880,19 +880,19 @@
 			<div class="block-item" type="text">
 				<div class="item" data-scroll-to="8">
 					<div class="text">NHẬN BÁO GIÁ</div>
-					<div class="icon"><img class="svg" data-src="./assets/icons/quotation.svg" alt="PHONE"></div>
+					<div class="icon"><img src="./assets/icons/quotation.svg" alt="PHONE"></div>
 				</div>
 			</div>
 			<div class="block-item">
 				<div class="item css-selector"><a href="tel:0938188329">
-						<div class="icon"><img class="svg" data-src="./assets/icons/phone.svg" alt="PHONE"></div>
+						<div class="icon"><img src="./assets/icons/phone.svg" alt="PHONE"></div>
 						<div class="text-hover">
 							<h5>0938 188 329</h5>
 						</div></a></div>
 			</div>
 			<div class="block-item">
 				<div class="item css-selector"><a href="./assets/images/index-4/1.jpg" download>
-						<div class="icon"><img class="svg" data-src="./assets/icons/download.svg" alt="PHONE"></div>
+						<div class="icon"><img src="./assets/icons/download.svg" alt="PHONE"></div>
 						<div class="text-hover">
 							<h5>tải chính sách thanh toán</h5>
 						</div></a></div>
